# multitme

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  Dockerfile  Makefile  README.md  TODO.md  celltyping.py  environment.yml  main.py  multitme_simple_sc_xenium.py  pseudo_label_markers.py  pyproject.toml  version.config
.cirro/: preprocess.py  process-compute.config  process-form.json  process-input.json
.github/workflows/: bump_version.yml  ci.yml  docker.yml
configs/: example.yaml
nextflow/: .nf-core.yml  CHANGELOG.md  CITATIONS.md  LICENSE  README.md  main.nf  modules.json  nextflow.config  nextflow_schema.json  ro-crate-metadata.json
nextflow/.devcontainer/: devcontainer.json  setup.sh
nextflow/.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
nextflow/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
nextflow/.github/workflows/: awsfulltest.yml  awstest.yml  branch.yml  fix_linting.yml
nextflow/assets/: adaptivecard.json  email_template.html  email_template.txt  methods_description_template.yml  multiqc_config.yml  samplesheet.csv  schema_input.json  sendmail_template.txt  slackreport.json
nextflow/conf/: base.config  modules.config  test.config  test_full.config
nextflow/docs/: README.md  output.md  usage.md
nextflow/tests/: default.nf.test  nextflow.config
nextflow/workflows/: multitme.nf
samplesheets/: example.csv
scripts/: backtest_slope_stopping.py  ebbf_comparison_report.py  run_on_iris.sh  run_test.sh
src/multitme/: __init__.py  config.py  utils.py
src/multitme/cli/: infer.py  preprocess.py  report.py  train.py
src/multitme/data/: __init__.py  formats.py  preprocessing.py  pseudo_labels.py
src/multitme/model/: __init__.py  (+2 more)
tests/: test_model.py  test_preprocessing.py  test_pseudo_labels.py
(+9 files in other folders)
